Update dependencies (#26)
* Upgrade gradle

* Upgrade dependencies

* Configure automatic release

* Fix sonar warnings

* Run integration tests during CI build

* Increment version

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>