@@ -1,6 +1,5 @@
 package org.itsallcode.jdbc;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -35,7 +34,7 @@ class SimpleConnectionITest {
                     .isInstanceOf(UncheckedSQLException.class)
                     .hasMessage(
                             "Error executing 'select count(*) from missingtable': Table \"MISSINGTABLE\" not found (this database is empty); SQL statement:\n"
-                                    + "select count(*) from missingtable [42104-224]")
+                                    + "select count(*) from missingtable [42104-232]")
                     .hasCauseInstanceOf(SQLException.class);
         }
     }
@@ -56,7 +55,7 @@ class SimpleConnectionITest {
                     () -> connection.query("select count(*) from missingtable"))
                     .isInstanceOf(UncheckedSQLException.class).hasMessage(
                             "Error preparing statement 'select count(*) from missingtable': Table \"MISSINGTABLE\" not found (this database is empty); SQL statement:\n"
-                                    + "select count(*) from missingtable [42104-224]");
+                                    + "select count(*) from missingtable [42104-232]");
         }
     }
 
@@ -66,7 +65,7 @@ class SimpleConnectionITest {
             connection.executeScript("CREATE TABLE TEST(ID INT, NAME VARCHAR(255));"
                     + "insert into test (id, name) values (1, 'test');");
             try (SimpleResultSet<Row> resultSet = connection.query("select count(*) as result from test")) {
-                final List<Row> rows = resultSet.stream().collect(toList());
+                final List<Row> rows = resultSet.stream().toList();
                 assertAll(
                         () -> assertThat(rows).hasSize(1),
                         () -> assertThat(rows.get(0).rowIndex()).isZero(),
